# HRM-Interpreter

./: .gitignore  Makefile  setup.cfg
docs/: README.md  example.hrm
examples/: cumulative_sum.py  multiplication.py  truth.hrm  truth_sim_hrm.py
src/hrm/: __init__.py  __main__.py  first_iteration.py  interpreter.py  outbox.hrm  parser.py  prog_1.hrm  state.py  utils.py
src/hrm/instructions/: __init__.py  arithmetic.py  control_flow.py  io.py  memory.py
src/hrm/types/: __init__.py  char.py  int.py  tiny.py
src/hrmi/: __main__.py  interpreter.py
sublime/: .gitattributes  copy.sh  hrm.sublime-build  hrm.sublime-color-scheme  hrm.sublime-syntax
syntax/: .gitattributes
tests/: test_interpreter.py  test_tiny.py
