[metadata]
name = hrm-py
version = 0.1.1
description = Human Resource Machine (HRM) Interpreter
long_description = file: docs/README.md
long_description_content_type = text/markdown
author = Sigmanificient
author_email = contact@yohannboniface.dev
keywords = hrm, interpreter, interpreted language, human, resource, machine
license = MIT
license_file = LICENSE
platform = unix, linux, osx, windows
project_urls =
    Github repository=https://github.com/Sigmanificient/HRM-Interpreter
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
[options]
include_package_data = True
packages =
    hrm
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
	pytest>=6.2.5
	mypy>=0.910

[options.package_data]
hrm = py.typed
